adiciona enpoints
